02 Python basics - home work added

--- a/02_Python_bacics/python_basics_hw.ipynb
+++ b/02_Python_bacics/python_basics_hw.ipynb
@@ -10,20 +10,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "long_phrase = 'Насколько проще было бы писать программы, если бы не заказчики'\n",
+    "long_phrase  = 'Насколько проще было бы писать программы, если бы не заказчики'\n",
     "short_phrase = '640Кб должно хватить для любых задач. Билл Гейтс (по легенде)'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(long_phrase) > len(short_phrase))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -34,10 +44,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Объем файла равен 1.00Mb\n"
+     ]
+    }
+   ],
+   "source": [
+    "volume_in_bytes = 1024*1024 # объем файла в байтах\n",
+    "volume_in_megabytes = volume_in_bytes / (2**20)\n",
+    "print(\"Объем файла равен {:.2f}Mb\".format(volume_in_megabytes))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -55,10 +77,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите месяц: март\n",
+      "Введите число: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ввод даты рождения\n",
+    "month = input(\"Введите месяц: \")\n",
+    "day = int(input(\"Введите число: \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вывод: Рыбы\n"
+     ]
+    }
+   ],
+   "source": [
+    "# определение знака задиака по данным https://zodiastro.ru/znaki-zodiaka-datyi-znakov-zodiaka.html\n",
+    "if   ((month == 'март') and (21 <= day <= 31)) or ((month == 'апрель') and (1 <= day <= 20)):\n",
+    "    sign = \"Овен\" #с 21 марта по 20 апреля Овен\n",
+    "elif ((month == 'апрель') and (21 <= day <= 30)) or ((month == 'май') and (1 <= day <= 20)):\n",
+    "    sign = \"Телец\" # с 21 апреля по 20 мая Телец\n",
+    "elif ((month == 'май') and (21 <= day <= 31)) or ((month == 'июнь') and (1 <= day <= 21)):        \n",
+    "    sign = \"Близнецы\" # с 21 мая по 21 июня Близнецы\n",
+    "elif ((month == 'июнь') and (22 <= day <= 30)) or ((month == 'июль') and (1 <= day <= 22)): \n",
+    "    sign = \"Рак\" # с 22 июня по 22 июля Рак\n",
+    "elif ((month == 'июль') and (23 <= day <= 31)) or ((month == 'август') and (1 <= day <= 23)):\n",
+    "    sign = \"Лев\" # с 23 июля по 23 августа Лев\n",
+    "elif ((month == 'август') and (24 <= day <= 31)) or ((month == 'сентябрь') and (1 <= day <= 23)):            \n",
+    "    sign = \"Дева\" # с 24 августа по 23 сентября Дева\n",
+    "elif ((month == 'сентябрь') and (24 <= day <= 30)) or ((month == 'октябрь') and (1 <= day <= 23)):        \n",
+    "    sign = \"Весы\" # с 24 сентября по 23 октября Весы\n",
+    "elif ((month == 'октябрь') and (24 <= day <= 31)) or ((month == 'ноябрь') and (1 <= day <= 22)):        \n",
+    "    sign = \"Скорпион\" # с 24 октября по 22 ноября Скорпион\n",
+    "elif ((month == 'ноябрь') and (23 <= day <= 30)) or ((month == 'декабрь') and (1 <= day <= 21)):        \n",
+    "    sign = \"Стрелец\" # с 23 ноября по 21 декабря Стрелец\n",
+    "elif ((month == 'декабрь') and (22 <= day <= 31)) or ((month == 'январь') and (1 <= day <= 20)):        \n",
+    "    sign = \"Козерог\" # с 22 декабря по 20 января Козерог\n",
+    "elif ((month == 'январь') and (21 <= day <= 31)) or ((month == 'февраль') and (1 <= day <= 20)):        \n",
+    "    sign = \"Водолей\" # с 21 января по 20 февраля Водолей\n",
+    "elif ((month == 'февраль') and (21 <= day <= 29)) or ((month == 'март') and (1 <= day <= 20)):        \n",
+    "    sign = \"Рыбы\" # с 21 февраля по 20 марта Рыбы\n",
+    "else:\n",
+    "    sign = \"ошибка в дате рождения, знак не определен\"\n",
+    "print(\"Вывод:\", sign)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,10 +176,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите заработанную плату в месяц: 100000\n",
+      "Введите сколько процентов уходит на ипотеку:30\n",
+      "Введите сколько процентов уходит на жизнь: 50\n",
+      "Введите количество премий за год:2\n",
+      "Вывод: На ипотеку было потрачено:  360000 рублей Было накоплено:  340000 рублей\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ввод данных\n",
+    "salary = int(input(\"Введите заработанную плату в месяц: \"))\n",
+    "mortage_persent = int(input(\"Введите сколько процентов уходит на ипотеку:\"))\n",
+    "cost_of_living_persent = int(input(\"Введите сколько процентов уходит на жизнь: \"))\n",
+    "bonus_amount = int(input(\"Введите количество премий за год:\"))\n",
+    "\n",
+    "#расчет\n",
+    "capital = int(12 * (salary * (100 - mortage_persent - cost_of_living_persent) / 100) + bonus_amount * salary * 0.5)\n",
+    "mortage = int(mortage_persent * salary * 12 / 100)\n",
+    "print(\"Вывод: На ипотеку было потрачено: \", mortage, \"рублей Было накоплено: \", capital, \"рублей\")"
+   ]
   }
  ],
  "metadata": {
@@ -119,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
