07: intervals task: error fixed: find_nearest2 should be find_nearest_binary

--- a/07_Errors_and_datetime/intervals.ipynb
+++ b/07_Errors_and_datetime/intervals.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,14 +108,14 @@
     "            return data[0] # ближайшее меньшее\n",
     "    middle = len(data)//2  # середина списка критериев\n",
     "    if n < data[middle]:  # искомое слева?\n",
-    "        return find_nearest2(data[0:middle+1], n)  # искать в левой \"половине\"\n",
+    "        return find_nearest_binary(data[0:middle+1], n)  # искать в левой \"половине\"\n",
     "    else:\n",
-    "        return find_nearest2(data[middle:], n)  # искать в правой половине"
+    "        return find_nearest_binary(data[middle:], n)  # искать в правой половине"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "17"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -168,15 +168,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Поиск функцией с вычитанием занял 2.59614 s\n",
-      "Бинарный поиск занял 2.64304 s\n"
+      "Поиск функцией с вычитанием занял 2.73095 s\n",
+      "Бинарный поиск занял 2.96774 s\n"
      ]
     }
    ],
