Lesson 8 Class: in class RateWithMaxAndDiff function currency_max(self) updated - currency Nominal taken into account, extra list removed

--- a/08_Class/8_Class_hw_Rate.ipynb
+++ b/08_Class/8_Class_hw_Rate.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "class RateWithMaxAndDiff(Rate):\n",
     "    \"\"\" во избежание почти внешней библиотеки используется наследование класса \"\"\"\n",
-    "    def __init__(self, format='full', diff=False):\n",
-    "        super().__init__(format)\n",
+    "    def __init__(self, format_='full', diff=False):\n",
+    "        super().__init__(format_)\n",
     "        self.diff = diff\n",
     "    \n",
     "    def currency_max(self):  # ЗАДАНИЕ 1\n",
@@ -42,13 +42,13 @@
     "        r = self.exchange_rates()\n",
     "\n",
     "        # формирование списка пар <название валюты>-<текущий курс>\n",
-    "        currency_list = [(r[currency]['Name'], r[currency]['Value']) for currency in r]       \n",
-    "                                 \n",
+    "#         currency_list = [(r[currency]['Name'], r[currency]['Value']/r[currency]['Nominal']) for currency in r]                                       \n",
     "        # выбор пары с максимальным курсом       \n",
-    "        max_ = max(currency_list, key = lambda x: x[1])  \n",
+    "#         max_ = max(currency_list, key = lambda x: x[1])  \n",
     "#         currency_list.sort(key = lambda x: x[1])  # сортивровка списка по значению курса                    \n",
-    "        \n",
-    "        return max_[0]\n",
+    "#         return max_[0]      \n",
+    "\n",
+    "        return max(r.items(), key=lambda x: x[1]['Value'] / x[1]['Nominal'])[1]['Name']\n",
     "       \n",
     "    def make_format_diff(self, currency): # ЗАДАНИЕ 2\n",
     "        \"\"\"\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
