Lab1: last task edited: max(column_sum)

--- a/Lab1_Python_basics/pyda-lab-0420.ipynb
+++ b/Lab1_Python_basics/pyda-lab-0420.ipynb
@@ -135,6 +135,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -430,16 +437,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[18, 19, 17, 13, 22]"
+       "22"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +456,7 @@
     "for i in range(len(matrix[0])):\n",
     "    for j in range(len(matrix)):\n",
     "        column_sum[j] += matrix[i][j]\n",
-    "column_sum"
+    "max(column_sum)"
    ]
   },
   {
