Lab1: variants added after webinar

--- a/Lab1_Python_basics/pyda-lab-0420.ipynb
+++ b/Lab1_Python_basics/pyda-lab-0420.ipynb
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
-    "string_01 = \"History is always written by the winners. hen two cultures clash, the loser is obliterated, and the winner writes the history books-books which glorify their own cause and disparage the conquered foe. As Napoleon once said, 'What is history, but a fable agreed upon?\""
+    "string_01 = \"History is always written by the winners. When two cultures clash, the loser is obliterated, and the winner writes the history books-books which glorify their own cause and disparage the conquered foe. As Napoleon once said, 'What is history, but a fable agreed upon?\""
    ]
   },
   {
@@ -46,22 +46,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "223"
+       "224"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(string_01.replace(' ', ''))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "224"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(string_01) - string_01.count(' ')"
    ]
   },
   {
@@ -73,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -82,13 +102,33 @@
        "44"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(string_01.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(re.findall(r'\\w+', string_01))"
    ]
   },
   {
@@ -100,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +148,7 @@
      "output_type": "stream",
      "text": [
       "['written', 'winners', 'winner', 'writes', 'which']\n",
-      "['What']\n",
+      "['When', 'What']\n",
       "['foe', 'fable']\n",
       "['said']\n",
       "['said']\n",
@@ -121,7 +161,10 @@
     "\n",
     "def find_words(string, char):\n",
     "    string = re.sub(r'[\\(\\)\\'\\\"!.,?-]', '', string) # убрать из строки все не буквы, кроме пробелов        \n",
-    "    words = [word for word in string.split() if word[0] == char[0]]      \n",
+    "#     words = [word for word in string.split() if word[0] == char[0]]      \n",
+    "#     или\n",
+    "    words = [word for word in string.split() if word.startswith(char[0])]\n",
+    "    \n",
     "\n",
     "    print(words)\n",
     "    \n",
@@ -136,10 +179,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['written', 'winners', 'winner', 'writes', 'which']\n",
+      "['When', 'What']\n",
+      "['foe', 'fable']\n",
+      "['said']\n",
+      "['said']\n",
+      "['always', 'and', 'and', 'agreed']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def find_words2(string, char):\n",
+    "    string = re.sub(r'[\\(\\)\\'\\\"!.,?-]', '', string) # убрать из строки все не буквы, кроме пробелов        \n",
+    "# string = re.sub('[^\\w\\s]', '', string)\n",
+    "    pattern = re.compile(r'\\b'+char[0]+r'\\w+')\n",
+    "#     print(pattern)\n",
+    "    words = re.findall(pattern, string) \n",
+    "\n",
+    "    print(words)\n",
+    "    \n",
+    "find_words2(string_01, \"w\")\n",
+    "find_words2(string_01, \"W\")\n",
+    "find_words2(string_01, \"f\")\n",
+    "find_words2(string_01, \"s\")\n",
+    "find_words2(string_01, \"sssss\")\n",
+    "find_words2(string_01, \"a\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -180,6 +254,30 @@
     "random.shuffle(numbers) # перемешать\n",
     "string = ''.join(map(str,numbers)) # преобразовать в строку\n",
     "string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'537649'"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random \n",
+    "number = ''\n",
+    "while '3' not in number:\n",
+    "    number = ''.join([str(random.randint(0, 9)) for i in range(6)])\n",
+    "number"
    ]
   },
   {
@@ -229,9 +327,29 @@
     }
    ],
    "source": [
-    "list_02 = [i for i in list_01 if (100> i > 10) or (500 > i > 200)]\n",
+    "list_02 = [i for i in list_01 if (100 > i > 10) or (500 > i > 200)]\n",
     "# print(list_02)\n",
     "sum(list_02)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1291"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([i for i in list_01 if (100 > i > 10) or (500 > i > 200)])"
    ]
   },
   {
@@ -308,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +441,7 @@
        " '0607': ['Сиропова', 'Виолетта', 'Эдуардовна', '28.05.2010', 'БСТ161']}"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,10 +450,42 @@
     "def change_group(students, student_num, new_group):    \n",
     "    students[student_num].pop(-1) # убрать последний элемент списка - номер группы\n",
     "    students[student_num].append(new_group)    \n",
-    "    return students_dict\n",
+    "    return students\n",
     "    \n",
     "    \n",
     "students_dict = change_group(students_dict, '0607', 'БСТ161')\n",
+    "students_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'0001': ['Антонов', 'Антон', 'Игоревич', '20.08.2009', 'БСТ161'],\n",
+       " '1102': ['Богов', 'Артем', 'Игоревич', '25.01.2010', 'БСТ162'],\n",
+       " '0333': ['Глаголева', 'Анастасия', 'Николаевна', '11.07.2009', 'БСТ163'],\n",
+       " '4004': ['Степанова', 'Наталья', 'Александровна', '13.02.2008', 'БСТ161'],\n",
+       " '0045': ['Боков', 'Игорь', 'Харитонович', '02.06.2009', 'БСТ161'],\n",
+       " '0096': ['Васильков', 'Валентин', 'Сергеевич', '20.03.2009', 'БСТ164'],\n",
+       " '0607': ['Сиропова', 'Виолетта', 'Эдуардовна', '28.05.2010', 'БСТ111']}"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def change_group2(students, student_num, new_group):    \n",
+    "    students[student_num][-1] = new_group\n",
+    "    return students\n",
+    "    \n",
+    "    \n",
+    "students_dict = change_group2(students_dict, '0607', 'БСТ111')\n",
     "students_dict"
    ]
   },
@@ -429,6 +579,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "89"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.array(matrix).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "89"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(matrix)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -461,10 +652,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 213,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(np.sum(matrix, axis=0)) # axis=0 по столбцам"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(np.sum(np.array(matrix).T, axis=1))"
+   ]
   }
  ],
  "metadata": {
