Lesson 11: Pandas: hw added

--- a/11_pandas/11_pandas.ipynb
+++ b/11_pandas/11_pandas.ipynb
@@ -151,7 +151,7 @@
        "Star Wars: Episode IV - A New Hope (1977)                1826\n",
        "Raiders of the Lost Ark (1981)                           1500\n",
        "Star Wars: Episode V - The Empire Strikes Back (1980)    1483\n",
-       "Godfather, The (1972)                                    1475\n",
+       "Schindler's List (1993)                                  1475\n",
        "Name: Title, dtype: int64"
       ]
      },
@@ -168,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Наибольшее количество оценок 5 выставлено фильму \"American Beauty (1999)\""
+    "Наибольшее количество оценок 5 выставлено фильму 'American Beauty (1999)'"
    ]
   },
   {
